<resources>
    <string name="app_name">Foolog</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="write_locate">사진 등록시 자동으로 위치가 추가됩니다.</string>
    <string name="select_food">음식의 종류를 고르세요</string>
    <string name="select_taste">음식의 맛을 고르세요</string>
    <string name="write_text">내용을 입력해주세요</string>
    <string name="write_marker_title">마커의 제목을 입력하세요.(15자내외)</string>
    <string name="write_marker_snippet">마커의 내용을 간단하게 입력하세요.(15자내외)</string>

    <string name="navi_map">지도 마커 통계보기</string>
    <string name="navi_graph">그래프 통계보기</string>
    <string name="navi_circle_graph">원형그래프 통계보기</string>
    <string name="navi_statistics">통계</string>
    <string name="navi_etc">기타</string>

    <string name="statistic_total">전체 태그 통계</string>
    <string name="statistic_month">월별 태그 통계</string>
    <string name="statistic_pick">기간 선택하기</string>
    <string name="title_select_date">기간을 선택해주세요</string>

    <string name="hint_start_date">Start Date</string>
    <string name="hint_select_date">Select date</string>
    <string name="hint_end_date">End Date \n -</string>
    <string name="button_ok">확인</string>


    <!--todo 임시로 string을 부여했고 다듬으려면 CustomView를 통해서 태그를 만들어 놔야 한다. -->
    <string name="tag_korea">한식</string>
    <string name="tag_china">중식</string>
    <string name="tag_japan">일식</string>
    <string name="tag_usa">양식</string>
    <string name="tag_etc">기타</string>
    <string name="tag_good">Good</string>
    <string name="tag_soso">SoSo</string>
    <string name="tag_bad">Bad</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
