<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:title="@string/navi_statistics">
            <menu>
                <item
                    android:id="@+id/nav_map"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/navi_map" />
                <item
                    android:id="@+id/nav_circle_graph"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/navi_circle_graph" />
                <item
                    android:id="@+id/nav_graph"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/navi_graph" />
            </menu>
        </item>
    </group>

    <item android:title="@string/navi_etc">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_menu_revert"
                android:title="Logout" />
        </menu>
    </item>

</menu>
