<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fastcampus.team1.foolog.WriteActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:onClick="doBack"
                app:srcCompat="?attr/homeAsUpIndicator" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/btnPost"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:onClick="doPost"
                android:textAlignment="center"
                app:srcCompat="@android:drawable/ic_menu_send" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/WriteImage"
                android:layout_width="100dp"
                android:layout_height="300dp"
                android:layout_weight="1"
                android:clickable="true"
                app:srcCompat="@mipmap/ic_launcher" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <View
                android:id="@+id/view3"
                android:layout_width="2dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#BDBDBD" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="72dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_menu_mylocation" />

            <TextView
                android:id="@+id/txtMap"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:hint="@string/write_locate"
                android:textSize="18sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <View
                android:id="@+id/view4"
                android:layout_width="2dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#BDBDBD" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtFood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/select_food"
                    android:paddingBottom="8dp"
                    android:paddingLeft="8dp"
                    android:paddingTop="8dp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txtTaste"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/select_taste" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/rgFood"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/radioBtnKorea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tag_korea" />

                <RadioButton
                    android:id="@+id/radioBtnJapan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tag_japan" />

                <RadioButton
                    android:id="@+id/radioBtnChina"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tag_china" />

                <RadioButton
                    android:id="@+id/radioBtnUsa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tag_usa" />

                <RadioButton
                    android:id="@+id/radioBtnEtc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tag_etc" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/rgTaste"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioBtnGood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tag_good" />

                <RadioButton
                    android:id="@+id/radioBtnSoso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tag_soso" />

                <RadioButton
                    android:id="@+id/radioBtnBad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tag_bad" />

            </RadioGroup>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <View
                android:id="@+id/view8"
                android:layout_width="2dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#BDBDBD" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/write_text"
                android:inputType="textMultiLine"
                android:padding="8dp" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_weight="1" />



    </LinearLayout>
</ScrollView>
